--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,93 +1,49 @@
-absl-py==2.3.1
 annotated-doc==0.0.4
 annotated-types==0.7.0
-anyio==4.12.0
-appnope==0.1.4
-asttokens==3.0.1
-certifi==2025.11.12
+anyio==4.12.1
+beautifulsoup4==4.14.3
+certifi==2026.1.4
 cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
-comm==0.2.3
-contourpy==1.3.3
-customtkinter==5.2.2
-cycler==0.12.1
-darkdetect==0.8.0
-debugpy==1.8.19
-decorator==5.2.1
-executing==2.2.1
-fastapi==0.127.0
-filelock==3.20.1
-flatbuffers==25.12.19
-fonttools==4.61.1
-fsspec==2025.12.0
+cryptography==46.0.5
+distro==1.9.0
+fastapi==0.128.7
+google==3.0.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.29.0
+google-api-python-client==2.190.0
+google-auth==2.48.0
+google-auth-httplib2==0.3.0
+google-genai==1.63.0
+google-generativeai==0.8.6
+googleapis-common-protos==1.72.0
+grpcio==1.78.0
+grpcio-status==1.71.2
 h11==0.16.0
-httptools==0.7.1
+httpcore==1.0.9
+httplib2==0.31.2
+httpx==0.28.1
 idna==3.11
-ipykernel==7.1.0
-ipython==9.8.0
-ipython_pygments_lexers==1.1.1
-jedi==0.19.2
-Jinja2==3.1.6
-joblib==1.5.3
-jupyter_client==8.7.0
-jupyter_core==5.9.1
-kiwisolver==1.4.9
-MarkupSafe==3.0.3
-matplotlib==3.10.8
-matplotlib-inline==0.2.1
-mediapipe==0.10.31
-mpmath==1.3.0
-nest-asyncio==1.6.0
-networkx==3.6.1
-numpy==2.2.6
-opencv-python==4.12.0.88
-packaging==25.0
-pandas==2.3.3
-parso==0.8.5
-pexpect==4.9.0
-pillow==12.0.0
-platformdirs==4.5.1
-polars==1.36.1
-polars-runtime-32==1.36.1
-prompt_toolkit==3.0.52
-psutil==7.2.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pycparser==2.23
+proto-plus==1.27.1
+protobuf==5.29.6
+pyasn1==0.6.2
+pyasn1_modules==0.4.2
+pycparser==3.0
 pydantic==2.12.5
 pydantic_core==2.41.5
-Pygments==2.19.2
-pyparsing==3.3.1
-python-dateutil==2.9.0.post0
+pyparsing==3.3.2
 python-dotenv==1.2.1
-python-multipart==0.0.21
-pytz==2025.2
-PyYAML==6.0.3
-pyzmq==27.1.0
 requests==2.32.5
-scikit-learn==1.8.0
-scipy==1.16.3
-setuptools==80.9.0
-six==1.17.0
-sounddevice==0.5.3
-stack-data==0.6.3
-starlette==0.50.0
-sympy==1.14.0
-threadpoolctl==3.6.0
-torch==2.9.1
-torchvision==0.24.1
-tornado==6.5.4
-traitlets==5.14.3
+rsa==4.9.1
+sniffio==1.3.1
+soupsieve==2.8.3
+starlette==0.52.1
+tenacity==9.1.4
+tqdm==4.67.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
-tzdata==2025.3
-ultralytics==8.3.241
-ultralytics-thop==2.0.18
-urllib3==2.6.2
-uv==0.9.29
+uritemplate==4.2.0
+urllib3==2.6.3
 uvicorn==0.40.0
-uvloop==0.22.1
-watchfiles==1.1.1
-wcwidth==0.2.14
 websockets==15.0.1
