--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,12 @@
-GITHUB_TOKEN=<github token here>
+
+#Github OAuth App credentials
+GITHUB_CLIENT_ID=<github oauth app client id>
+GITHUB_CLIENT_SECRET=<github oauth app client secret>
+GITHUB_REDIRECT_URI=<github oauth redirect uri>
+
+#Gemini API key
 GEMINI_API_KEY=<gemini api key here>
+
+
 PORT=<port>
+DATABASE_URL=postgresql://postgres:<password>@<host>:<port>/postgres
