User database queries

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,4 @@ GEMINI_API_KEY=<gemini api key here>
 
 PORT=<port>
 DATABASE_URL=postgresql://postgres:<password>@<host>:<port>/postgres
+FERNET_KEY=<fernet key here>
