--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,7 @@
 GITHUB_CLIENT_ID=<github oauth app client id>
 GITHUB_CLIENT_SECRET=<github oauth app client secret>
 GITHUB_REDIRECT_URI=<github oauth redirect uri>
+FRONTEND_BASE_URL=<frontend app url, e.g. http://localhost:3000>
 
 #Gemini API key
 GEMINI_API_KEY=<gemini api key here>
